<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{f412b0ef-deea-47d4-94a5-3f7ef679855d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	gDigInputs	 		AT%I*	:	ST_EL1809;	//Digital inputs at Terminals 21 and 30 [EL1809]
	gDigOutputs			AT%Q*	:	ST_EL2809;	//Digital Outputs at Terminal 22 		[EL2809]
	gRelayOutputs		AT%Q*	:	ST_EL2624;	//Digital Relay Outputs at Terminal 23 	[EL2624]
	gAnalogInputs		AT%I*	:	ST_EL3058; 	//Analog inputs at Terminals 25 		[EL3058]
	gAnalogInputs2Ch	AT%I*	:	ST_EL3022;	//Analog inputs at Terminals 17 		[EL3022]
	
	gParameters		:	ST_HMIParameters; //Machine Parameters
	
	//Safety
	bInAckSignal		AT %I* : BOOL;
	bInResetSignal		AT %Q* : BOOL;
	
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>